# Gitguard-cli

./: README.md  feat_req.md  feature requirements.md  gitguard.cmd  main.py  pyproject.toml
Docs/: feat_req.md  feature requirements.md
gitguard/: __init__.py  cli.py
gitguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
gitguard/commands/: __init__.py  check.py  history.py  verify_env.py
gitguard/core/: __init__.py  ai_audit.py  dependency_guard.py  models.py  obfuscation_review.py  preflight.py  reporting.py  runtime_analysis.py  sandbox.py  session.py  state.py  validation.py
gitguard/ui/: __init__.py  console.py
tests/: __init__.py  test_ai_audit.py  test_cli.py  test_dependency_guard.py  test_fixture_repos.py  test_obfuscation_review.py  test_runtime_analysis.py  test_sandbox.py  test_session.py  test_state.py  test_validation.py
tests/fixtures/: top_npm_packages.json  top_pypi_packages.json
tests/fixtures/node_lifecycle/: package.json
tests/fixtures/obfuscated_js/: app.js  package.json
tests/fixtures/safe_python/: README.md  requirements.txt
tests/fixtures/suspicious_setup/: setup.py
tests/fixtures/typosquat_python/: requirements.txt
