[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitguard"
version = "0.1.0"
description = "CLI for repository risk assessment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docker>=7.1.0",
    "google-genai>=1.0.0",
    "psutil>=7.0.0",
    "rich>=14.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "typer>=0.16.0",
]

[project.scripts]
gitguard = "gitguard.cli:main"

[tool.setuptools.packages.find]
include = ["gitguard*"]
